--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,15 @@
-name: Java CI com Maven
+name: Java CI com Maven e SonarCloud
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
+    types: [opened, synchronize, reopened]
     branches: [ "main" ]
 
 jobs:
   build:
+    name: Build and Analyze
     runs-on: ubuntu-latest
 
     steps:
@@ -20,6 +22,22 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Build com Maven
-        run: mvn clean install
+      - name: Cache do Maven
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven
 
+      - name: Build e testes com Maven
+        run: mvn clean verify
+
+      - name: Análise com SonarCloud
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.projectKey=Neylton_pipeline \
+            -Dsonar.organization=Neylton \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.login=$SONAR_TOKEN
