--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches: [ "main" ]
+  workflow_dispatch:
+    
 
 jobs:
   build:
