--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,12 @@ jobs:
 
       - name: Build da imagem Docker
         run: docker build -t demo-pipeline .
+
+      - name: Login no Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Tag da imagem
+        run: docker tag demo-pipeline ${{ secrets.DOCKER_USERNAME }}/demo-pipeline:latest
+
+      - name: Push da imagem para o Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/demo-pipeline:latest
